fix tables on smaller screens

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -287,6 +287,9 @@ pre > code {
 
 table {
   border-collapse: collapse;
+  display: block;
+  max-width: fit-content;
+  overflow-x: auto;
   width: 100%;
 }
 thead {
